Avoid news to expand full width on tablet/mobile
Previously news were forced to expand full width which broke
built-in tistory layout.

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -370,20 +370,6 @@ body.tistory_grid_1050 div#ttCanvas { max-width: 100% !important; }
 .tt-span-12 {
     max-width: 100% !important;
 }
-@media screen and (max-width: 1200px) {
-    .tt-span-1,
-    .tt-span-2,
-    .tt-span-3,
-    .tt-span-4,
-    .tt-span-5,
-    .tt-span-6,
-    .tt-span-7,
-    .tt-span-8,
-    .tt-span-9,
-    .tt-span-10,
-    .tt-span-11,
-    .tt-span-12 { width:100% !important; }
-}
 .moreless_fold {
     padding-left: 10px;
     background: url(./images/btn_more.gif) no-repeat 0 50%;
